--- a/cdingin-app/package.json
+++ b/cdingin-app/package.json
@@ -37,6 +37,7 @@
     "react-router": "^7.7.0",
     "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.0.5"
   },
   "devDependencies": {
